0.96.0	UNRELEASED

 UI
 
  * Add colored status messages in Olive file list (Jasper Groenewegen)

 CHANGES
 
  * Add ginfo command line option (Jasper Groenewegen)

0.95.0	2008-08-04

 UI

  * Added Refresh menu option with F5 keyboard shortcut (Russ Brown)

  * Show progress bars in bzr viz window (Chad Miller, Jelmer Vernooij)

  * Added menu option for indexing branches if bzr-search is present.
    (Jelmer Vernooij)

  * Add "Send Merge Directive" button in bzr viz. (Jelmer Vernooij)

  * Remove dummy "Edit->Find" option. (Jelmer Vernooij)

  * Added an optional diff panel to bzr vis.  (Scott Scriven)

  * Made bzr vis remember whether the toolbar is visible.  (Scott Scriven)

  * Made bzr vis remember window and panel sizes.  (Scott Scriven)

  * Sort Olive bookmarks by title (Jasper Groenewegen)
  
  * Add controls to wrap long lines in gdiff and diff in visualise. (Jasper Groenewegen, #229789)
  
  * Made merge dialog to give choice between folder and custom location (Jasper Groenewegen)

  * Add new dialog to browse looms and switch to threads in loom branches. (Jelmer Vernooij)
  
  * Show status for folders in Olive file list (Jasper Groenewegen)
  
  * Change appearance Olive bookmarks (Jasper Groenewegen)
  
  * Add ability to have dialog popup from Olive location bar. (Jasper Groenewegen)

 BUG FIXES

  * Replace _() calls by _i18n() calls. (Vincent Ladeuil, #187283)
  
  * Fixed adding tags. (Javier Derderian, #228709)

  * Fix history mode button. (Jasper Groenewegen, #144962)

  * Fixed handle-patch script. (Jelmer Vernooij)

  * Fix import in olive. (Jelmer Vernooij, #223935)

  * Avoid use of removed smart_add. (Jelmer Vernooij, #244025, #244027)

  * Remove use of upstream removed Repository.revision_parents() 
    (Jelmer Vernooij)

  * List network drives in Olive. (Kevin Light, #244308)

  * Fix progress bar handling. (Jelmer Vernooij)

  * Fix broken symlink handling. (Jasper Groenewegen)

  * Fix import in Olive rename dialog. (Kevin Light)
